<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!-- Location settings values -->
    <string name="pref_location_key" translatable="false">location_key</string>
    <string name="pref_location_title" translatable="false">Location (postal code)</string>
    <string name="pref_location_default" translatable="false">92507</string>

    <!-- Units settings values -->
    <string name="pref_units_key" translatable="false">units_format</string>
    <string name="pref_units_title" translatable="false">Temperature Units</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string-array name="pref_units_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Country settings values -->
    <string name="pref_country_key" translatable="false">country_key</string>
    <string name="pref_country_title" translatable="false">Country</string>
    <string name="pref_country_default" translatable="false">us</string>
    <string-array name="pref_country_entries">
        <item>United States</item>
        <item>Canada</item>
        <item>Mexico</item>
        <item>France</item>
        <item>Germany</item>
        <item>United Kingdom</item>
        <item>Japan</item>
    </string-array>

    <string-array name="pref_country_entry_values">
        <item>us</item>
        <item>ca</item>
        <item>mx</item>
        <item>fr</item>
        <item>de</item>
        <item>gb</item>
        <item>jp</item>
    </string-array>


</resources>
