<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <ListPreference
        android:title=""
        android:defaultValue=""
        android:entries=""
        android:entryValues=""
        android:key=""
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_titles"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>